styles/base.css
* {
  @apply subpixel-antialiased
    motion-safe:transition-colors;
}

html,
body {
  @apply size-full
    [scrollbar-gutter:auto];
}

body {
  @apply bg-white
    font-open-sans
    text-neutral-950
    motion-safe:scroll-smooth
    dark:bg-neutral-950
    dark:text-white;
}

